# youtube_idea_crew

./: README.md  pyproject.toml
src/youtube_idea/: crew.py  main.py
src/youtube_idea/config/: agents.yaml
