[project]
name = "youtube_idea"
version = "0.1.0"
description = "youtube_idea using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
youtube_idea = "youtube_idea.main:run"
run_crew = "youtube_idea.main:run"
train = "youtube_idea.main:train"
replay = "youtube_idea.main:replay"
test = "youtube_idea.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
